knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Summary_Formula__c/fields/pqcrush__Apply_To_All_Cross_Sell_Maps__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Apply_To_All_Cross_Sell_Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to apply this formula to all Cross-Sell maps</description>
    <inlineHelpText>Check this to apply this formula to all Cross-Sell maps</inlineHelpText>
    <label>Apply To All Cross-Sell Maps</label>
    <type>Checkbox</type>
</CustomField>