knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Summary_Formula__c/fields/pqcrush__Color__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Color__c</fullName>
    <description>Color RBG in the form of #rrggbb</description>
    <inlineHelpText>Color RBG in the form of #rrggbb</inlineHelpText>
    <label>Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>