knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Summary_Formula__c/fields/pqcrush__Formula__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Formula__c</fullName>
    <inlineHelpText>Formulas are comprised of different amount types and math symbols.  The amount type variable is defined by using the name of the amount type surrounded by curly braces.  Example formula: {Amount Type 1} + {Amount Type 2}</inlineHelpText>
    <label>Formula</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>