knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Summary_Formula__c/fields/pqcrush__White_Space__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space__c</fullName>
    <label>White Space</label>
    <referenceTo>pqcrush__White_Space__c</referenceTo>
    <relationshipLabel>Cross-Sell Summary Formulas</relationshipLabel>
    <relationshipName>Cross_Sell_Summary_Formulas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>