knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__WS_Summary_Formula__c/listViews/pqcrush__All.listView-meta.xml
<ListView>
    <fullName>pqcrush__All</fullName>
    <columns>NAME</columns>
    <columns>pqcrush__Color__c</columns>
    <columns>pqcrush__Label__c</columns>
    <columns>pqcrush__Formula__c</columns>
    <columns>pqcrush__White_Space__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>